--- a/hobbies.html
+++ b/hobbies.html
@@ -43,8 +43,10 @@
 
     <footer>
         <ul>
-            <li><a href="https://www.linkedin.com/in/daniel-telders/" class="social linkedin">LinkedIn</a></li>
-            <li><a href="https://github.com/dtelders" class="social github">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/daniel-telders/" class="social linkedin"
+                    target="_blank">LinkedIn</a>
+            </li>
+            <li><a href="https://github.com/dtelders" class="social github" target="_blank">Github</a></li>
         </ul>
         <p class="copyright">Copyright 2019, Daniel Telders</p>
     </footer>
